@@ -54,7 +54,7 @@
 #include "cobc.h"
 #include "tree.h"
 
-#include "cobgetopt.h"
+#include "lib/cobgetopt.h"
 
 struct strcache {
 	struct strcache	*next;
@@ -1825,9 +1825,18 @@ process_command_line (const int argc, char **argv)
 	int			c;
 	int			idx;
 	int			n;
+	int 			argnum;
 	enum cob_exception_id	i;
 	struct stat		st;
 	char			ext[COB_MINI_BUFF];
+
+	/* Translate command line arguments from WIN to UNIX style */
+	argnum = 1;
+	while (++argnum <= argc) {
+		if (argv[argnum - 1][0] == '/') {
+			argv[argnum - 1][0] = '-';
+		}
+	}
 
 	while ((c = cob_getopt_long_long (argc, argv, short_options,
 					  long_options, &idx, 1)) >= 0) {
