@@ -993,9 +993,10 @@ AC_SUBST([COB_KEYWORD_INLINE])
 AC_SUBST([COB_HAS_ISAM])
 AC_SUBST([COB_PATCH_LEVEL], [$with_patch_level])
 
-AC_CONFIG_FILES([bin/cob-config Makefile libcob/Makefile cobc/Makefile
-	bin/Makefile po/Makefile.in doc/Makefile config/Makefile
-	copy/Makefile tests/atlocal tests/Makefile tests/cobol85/Makefile
+AC_CONFIG_FILES([bin/cob-config Makefile libcob/Makefile lib/Makefile
+	cobc/Makefile bin/Makefile po/Makefile.in doc/Makefile
+	config/Makefile copy/Makefile
+	tests/atlocal tests/Makefile tests/cobol85/Makefile
 	extras/Makefile])
 
 AC_CONFIG_COMMANDS([chmod1], [chmod +x bin/cob-config])
